--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "gh-pages": "^6.1.1",
-    "mysql2": "^3.9.7",
-    "nodemailer": "^6.9.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.23.0",
-    "react-router-dom": "^6.23.0",
-    "uuid": "^9.0.1"
+    "mysql2": "^3.9.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
