--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,6 +3,9 @@
     {
       "src": "./index.js",
       "use": "@vercel/node"
+    },
+    {
+      "routes": [{ "src": "/(.*)", "dest": "/" }]
     }
   ]
 }
