--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.1",
+    "react-social-icons": "^6.16.0",
     "sonner": "^1.4.41",
     "uuid": "^9.0.1",
     "vercel": "^34.2.0"
