--- a/package.json
+++ b/package.json
@@ -283,6 +283,7 @@
     "readdirp": "^3.6.0",
     "reflect.getprototypeof": "^1.0.6",
     "regexp.prototype.flags": "^1.5.2",
+    "resend": "^3.2.0",
     "resolve": "^2.0.0-next.5",
     "resolve-from": "^4.0.0",
     "reusify": "^1.0.4",
